@@ -1,3 +1,8 @@
+Mon Mar 16 19:09:27 2009	Pat Rankin	<rankin@pactechdata.com>
+
+	* vms-conf.h: Synchronize with configh.in,
+	(HAVE_ATEXIT): Define.
+
 Tue Jan 27 21:49:53 2009  Arnold D. Robbins  <arnold@skeeve.com>
 
 	Per Pat Rankin based on changes to awk.h and change in main code
